tests/NormalTests/paczka1/small_fuzzy/55017745.err
Error in line 1: pxlTG A529 44,0
Error in line 3: vlPAK A529 98,4
